# r4d

./: .gitignore  Cargo.toml  LICENSE  README.md  built_in_macro_signatures.json  test.r4d
docs/: 3_0.md  3_0_hassle.md  3_2_roadmap.md  basic_macros.md  bugs_to_handle.md  candidates.md  change.md  code_manipulation.md  debug.md  debugger_refactor.md  error_handling.md  ext.md  features.md  file_operation.md  format_comment.md  index.md  issues.md  macro.man  macro_help.md  macro_indices.md  macro_syntax.md  macro_types.md  macros.md  meta.md  milestone.md  modes.md  newline_rules.md  parsing_rule.md  r4d_internal.md  similar.md  storage.md  todo.md  update_indices.r4d  usage.md
docs/done/: 4_0.md  old.md
docs/tests/: clap.md
ext_template/: Cargo.toml
ext_template/src/: lib.rs
pfc_scripts/: chpr.r4d  icr.r4d  insulav.md  proof_of_concepts.md  slicel_test.r4d
src/: arg_parser.rs  argument.rs  auth.rs  basic.rs  basic_map.rs  bin-rad.rs  bin.rs  cli.rs  closure_map.rs  common.rs  compile.rs  consts.rs  debug_help_message.txt  debugger.rs  define_parser.rs  deterred_map.rs  env.rs  error.rs  extension.rs  fileio.rs  formatter.rs  function_map.rs  hookmap.rs  keyword_map.rs  lexor.rs  lib.rs  logger.rs  macro.pest  main.rs  models.rs  package.rs  parser.rs  processor.rs  runtime_map.rs  script.rs  sigmap.rs  storage.rs  test.rs  utils.rs  wasm.rs
src/cli/: cli_rad.rs  cli_rado.rs  mod.rs
src/manual_src/det/: EB.r4d  anon.r4d  append.r4d  bufread.r4d  consume.r4d  exec.r4d  expand.r4d  fassert.r4d  forby.r4d  foreach.r4d  forline.r4d  forloop.r4d  forsp.r4d  if.r4d  ifdef.r4d  ifdefel.r4d  ifelse.r4d  ifenv.r4d  ifenvel.r4d  include.r4d  incread.r4d  logm.r4d  mapa.r4d  mapf.r4d  mapl.r4d  que.r4d  queif.r4d  read.r4d  readin.r4d  readto.r4d  spread.r4d  stream.r4d  streaml.r4d  tempin.r4d
src/manual_src/fun/: PS.r4d  abs.r4d  addcsv.r4d  addexp.r4d  addexpr.r4d  after.r4d  align.r4d  alignby.r4d  alignc.r4d  alignl.r4d  assert.r4d  border.r4d  capture.r4d  ceil.r4d  chars.r4d  chomp.r4d  clear.r4d  coll.r4d  comma.r4d  comment.r4d  comp.r4d  cond.r4d  condl.r4d  cont.r4d  count.r4d  counter.r4d  countl.r4d  countw.r4d  cube.r4d  cut.r4d  date.r4d  dec.r4d  decl.r4d  def.r4d  dnl.r4d  docu.r4d  dropcsv.r4d  dump.r4d  empty.r4d  enl.r4d  (+147 more)
src/map/: anon_map.rs  deterred_map.rs  deterred_map_impl.rs  function_map.rs  function_map_impl.rs  hookmap.rs  macro_cache.rs  macro_map.rs  mod.rs  runtime_map.rs  sigmap.rs
src/parser/: arg_parser.rs  define_parser.rs  mod.rs
src/process/: mod.rs  processor.rs  state.rs
