[package]
name = "r4d"
version = "3.0.0-rc.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["macro", "cli", "text-processing"]
categories = ["command-line-utilities", "text-processing"]
description = "Text oriented macro processor"
homepage = "https://github.com/simhyeon/r4d"
repository = "https://github.com/simhyeon/r4d"
readme = "README.md"
default-run = "rad"

[[bin]]
name = "rad"
path = "src/bin/rad.rs"

[[bin]]
name = "rado"
path = "src/bin/rado.rs"

[lib]
name = "r4d"
path = "src/lib.rs"
crate-type = ["cdylib","rlib"]

[features]
# For some reaons that I dont' know, clap cannot be enabled with dep: prefix
basic = ["clap", "dep:filetime","rad_ext_template?/binary"]
binary = ["clap","debug", "full", "dep:filetime", "rad_ext_template?/binary", "signature", "color"]
full = [ "evalexpr", "chrono", "textwrap", "cindex"]

debug = [ "dep:crossterm", "dep:similar" ]
color = [ "dep:colored", "dep:atty" ]
hook = []
signature = ["dep:serde_json"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:wee_alloc"]
template = ["rad_ext_template"]

[dependencies]
bincode = "1.3.3"
regex = "1.5.4"
lazy_static = "1.4.0"
dcsv = { version = "0.2.0"}
filetime = { version = "0.2", optional = true }
chrono = {version = "0.4.19", optional = true}
clap = { version = "3.0.3", default-features = false, features = ["std"], optional=true}
colored = {version = "2.0.0", optional = true}
crossterm = {version = "0.20.0", optional = true}
evalexpr = {version = "6.4.0", optional = true}
serde = { version = "1.0.126", features = ["derive"]}
serde_json = { version = "1.0", optional = true}
similar = { version = "2.0.0", optional = true}
textwrap = { version = "0.14.2", optional = true}
cindex = {version = "0.5.1", optional = true}
rad_ext_template = { version="0.3.0", optional = true}
atty = { version = "0.2.14", optional = true}

# Wasm related dependencies
wasm-bindgen = { version = "0.2.74", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true}
wee_alloc = { version = "0.4.5", optional = true }

[package.metadata.deb]
features = ["binary"]
maintainer = "Simon creek <simoncreek@tutanota.com>"
copyright = "2022, Simon creek <simoncreek@tutanota.com>"
