[package]
name = "r4d"
version = "3.2.0-beta.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["macro", "cli", "text-processing"]
categories = ["command-line-utilities", "text-processing"]
description = "Text oriented macro processor"
homepage = "https://github.com/simhyeon/r4d"
repository = "https://github.com/simhyeon/r4d"
readme = "README.md"
default-run = "rad"

[[bin]]
name = "rad"
path = "src/bin/rad.rs"

[[bin]]
name = "rado"
path = "src/bin/rado.rs"

[lib]
name = "r4d"
path = "src/lib.rs"
crate-type = ["cdylib","rlib"]

[features]
# Binary related 
# For some reaons that I dont' know, clap cannot be enabled with dep: prefix
basic = ["clap", "dep:filetime","rad_ext_template?/binary"]
binary = ["basic","debug", "full", "signature", "color"]
full = [ "evalexpr", "chrono", "textwrap", "cindex"]

# ETC
debug = [ "dep:crossterm", "dep:similar" ]
color = [ "dep:colored", "dep:atty" ]
hook = []
signature = ["dep:serde_json"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:wee_alloc"]
template = ["rad_ext_template"]

[dependencies]
# Default features
bincode = "1.3.3"
dcsv = { version = "0.3.3-rc2", git="https://github.com/simhyeon/dcsv"}
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"]}
trexter = "0.1.1"
once_cell = "1.18.0"
itertools = "0.12.0"
flate2 = "1.0.24"

# Optioanl features
atty = { version = "0.2.14", optional = true}
chrono = {version = "0.4.31", optional = true}
cindex = {version = "0.5.2-rc1", optional = true, git="https://github.com/simhyeon/cindex", branch="dev"}
clap = { version = "4.4.10", default-features = false, features = [ "std","help", "usage", "error-context", "suggestions", "color" ], optional=true}
colored = {version = "2.0.4", optional = true}
crossterm = {version = "0.27.0", optional = true}
evalexpr = {version = "11.2.0", optional = true}
filetime = { version = "0.2.22", optional = true }
rad_ext_template = { version="0.3.0", optional = true}
serde_json = { version = "1.0.108", optional = true}
similar = { version = "2.3.0", optional = true}
textwrap = { version = "0.16.0", optional = true}

# Wasm related dependencies
wasm-bindgen = { version = "0.2.74", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true}
wee_alloc = { version = "0.4.5", optional = true }

[package.metadata.deb]
features = ["binary"]
maintainer = "Simon creek <simoncreek@tutanota.com>"
copyright = "2023, Simon creek <simoncreek@tutanota.com>"
