[package]
name = "r4d"
version = "4.0.0-beta.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["macro", "cli", "text-processing"]
categories = ["command-line-utilities", "text-processing"]
description = "Text oriented macro processor"
homepage = "https://github.com/simhyeon/r4d"
repository = "https://github.com/simhyeon/r4d"
readme = "README.md"
default-run = "rad"

[[bin]]
name = "rad"
path = "src/bin/rad.rs"

[[bin]]
name = "rado"
path = "src/bin/rado.rs"

[lib]
name = "r4d"
path = "src/lib.rs"
crate-type = ["cdylib","rlib"]
doctest = false

[features]
# Binary related 
# For some reaons that I dont' know, clap cannot be enabled with dep: prefix
default = ["rchash"]
basic = ["clap", "dep:filetime","rad_ext_template?/binary"]
binary = ["basic","debug", "full", "color", "evalexpr"]
full = [ "chrono", "cindex"]

# ETC
debug = [ "dep:crossterm", "dep:similar" ]
color = [ "dep:colored", "dep:atty" ]
hook = []
template = ["rad_ext_template"]
rchash = ["rustc-hash"]

[dependencies]
# Default features
bincode = "1.3.3"
dcsv = { version = "0.3.4-beta.2"}
regex =  "1.10.2"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = { version = "1.0.108"}
trexter = "0.1.1"
once_cell = "1.18.0"
itertools = "0.12.0"
flate2 = "1.0.24"
unicode-width = "0.1.11"

# Optioanl features
rustc-hash = { version ="1.1.0", optional = true}
evalexpr = {version = "11.2.0", optional = true}
atty = { version = "0.2.14", optional = true}
chrono = {version = "0.4.31", optional = true}
cindex = {version = "0.6.0-beta.1", optional = true}
clap = { version = "4.4.10", default-features = false, features = [ "std","help", "usage", "error-context", "suggestions", "color" ], optional=true}
colored = {version = "2.0.4", optional = true}
crossterm = {version = "0.27.0", optional = true}
filetime = { version = "0.2.22", optional = true }
rad_ext_template = { version="0.3.0", optional = true}
similar = { version = "2.3.0", optional = true}
textwrap = "0.16.0"

[package.metadata.deb]
features = ["binary"]
maintainer = "Simon creek <simoncreek@tutanota.com>"
copyright = "2024, Simon creek <simoncreek@tutanota.com>"
